--- a/src/Components/TravelSerachEngine/SearchBar.css
+++ b/src/Components/TravelSerachEngine/SearchBar.css
@@ -98,7 +98,7 @@
     text-align: center;
     margin-bottom: -3rem;
   }
-  .submit_btn {
+  .btnsearch {
     background-color: #3e67b0;
     color: white;
     padding: 12px 18px;
