--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 .wholeBackground{
     background: linear-gradient(0deg, #18213B 0%, #18213B 100%);
-    font-family: "Open Sans", sans-serif;
-   
-    
+    font-family: "Open Sans", sans-serif; 
 }
+
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+  
+
+  .scrollbar-hidden {
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
+  }
