--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,24 +1,12 @@
-.scrollbar-hidden::-webkit-scrollbar {
-    display: none;
-  }
+.sidebar {
+  position: fixed;
+  height: 100vh; 
+  background-color: #1749a0; 
+  overflow-y: auto;
   
+}
 
-  .scrollbar-hidden {
-    -ms-overflow-style: none;  
-    scrollbar-width: none;  
-  }
-
-  .sidebar {
-    position: fixed; /* Keep sidebar fixed */
+.sidebar-content {
+  padding-bottom: 7rem; 
  
-    height: 100vh; /* Full viewport height */
-   
-    background-color: #1749a0; /* Background color of the sidebar */
-    overflow-y: auto; /* Enable vertical scrolling */
-   
-  }
-  
-  .sidebar-content {
-    padding-bottom: 7rem; /* Space at the bottom, adjust as needed */
-  }
-  
+}
